# fiap-tech-challenge-1

./: .bashrc.swp  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0_44fef50d7d68_create_users_table.py  1_235fb2e78764_create_products_table.py  2_de52cb6609a8_create_orders_table.py  3_805fa7921c89_create_orders_products_table.py  a820d7fb23fb_add_orders_products_table.py
diagram/: k8s-diagram.mmd
docs/: openapi.json
github/workflows/: deploy.yml
infrastructure/kubernetes/: PROVISIONING.md  README.md  alembic-migration-job.yaml  cluster.yaml  deployment-local.yaml  deployment-prod.yaml  deployment.yaml  hpa.yaml  ingress.yaml  postgres-deployment.yaml  postgres-pvc.yaml  service.yaml  test.yaml
scripts/: alembic-upgrade.sh  api.sh
src/api/: app.py
src/api/v1/: __init__.py  orders.py  products.py  users.py
src/config/: database.py  dependencies_handlers.py  dependency_injection.py  settings.py
src/core/: dependency_injection.py  settings.py
src/db/interfaces/: order.py  product.py  user.py
src/db/mongodb/: database.py
src/db/postgresql/: database.py  init_db.py
src/models/: order.py  product.py  queue.py  user.py
src/repositories/: order_repository.py  product_repository.py  queue_repository.py  user_repository.py  utils.py
src/repositories/postgresql/: order_repository.py  (+3 more)
src/services/: order_service.py  product_service.py  queue_service.py  user_service.py
terraform/: .terraform.lock.hcl  main.tf  providers.tf
(+53 files in other folders)
